# drawio-confluence-cli

./: .gitignore  README.md  pyproject.toml
src/drawio_cli/: __init__.py  __main__.py  cli.py  config.py  confluence.py  diagram.py  editor.py  export.py  publisher.py  state.py
tests/: __init__.py  test_confluence.py  test_diagram.py  test_state.py
tests/fixtures/: sample.drawio
