[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio-confluence-cli"
version = "0.1.0"
description = "CLI tool to manage draw.io diagrams with Confluence Server/DC integration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
export = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "playwright>=1.40",
]

[project.scripts]
drawio-cli = "drawio_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/drawio-confluence-cli"
Documentation = "https://github.com/yourusername/drawio-confluence-cli#readme"
Issues = "https://github.com/yourusername/drawio-confluence-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/drawio_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
